--- a/WADWolfram/src/main/resources/templates/login.html
+++ b/WADWolfram/src/main/resources/templates/login.html
@@ -98,7 +98,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                        <form role="form" class="register-form">
+                        <form role="form" class="register-form" action="/users/login" method="post">
                             <h2>¡Entra! <small>Participa de forma activa</small></h2>
                             <hr class="colorgraph">
 
@@ -106,15 +106,15 @@
                                 <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
+                                <input type="password" name="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
                             </div>
 
                             <div class="row">
                                 <div class="col-xs-4 col-sm-3 col-md-3">
                                     <span class="button-checkbox">
-						<button type="button" class="btn" data-color="info" tabindex="7">Se me ha olvidado la contraseña</button>
-                        <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
-					</span>
+                                        <button type="button" class="btn" data-color="info" tabindex="7">Se me ha olvidado la contraseña</button>
+                                        <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
+					               </span>
                                 </div>
                             </div>
 
