--- a/WADWolfram/src/main/resources/templates/oneProject.html
+++ b/WADWolfram/src/main/resources/templates/oneProject.html
@@ -90,7 +90,8 @@
                     <div class="col-lg-12">
                         <div class="text-center">
                             <div class="inside">
-                                <h1>Título del proyecto</h1>
+                                {{#Project}}
+                                <h1>{{title}}</h1>
                                 <div class="row" id="proyectPage">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -100,41 +101,42 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div id="information">
-                                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis lacus cursus, sollicitudin dolor in, pharetra tellus. Mauris rutrum ullamcorper nisl ut malesuada. Pellentesque non vulputate ex. Integer tempor sem id commodo consequat. Donec egestas mi in consectetur malesuada. Nullam tincidunt gravida lectus, et maximus justo pharetra quis. Nunc sagittis enim nec efficitur tristique. Nullam non porta nulla. Proin id ex id mi feugiat facilisis nec quis risus. Sed commodo luctus ornare. Sed maximus luctus sem, mattis pretium sapien dignissim vel. Nullam a ultricies turpis. Aliquam erat volutpat. Nunc iaculis tempus aliquam. Duis nec mi nibh. Proin eget sem id risus tempus tincidunt. Mauris tempor orci quam, a gravida metus ullamcorper ac. Aliquam vel tortor rhoncus, egestas turpis sit amet, facilisis nisl. Vivamus ullamcorper tortor eu sapien laoreet lacinia. Pellentesque quis felis nunc. Integer eu odio purus. Etiam in auctor mauris, in ultricies tortor. Vestibulum dictum nisl sed iaculis viverra. In efficitur nisl sed diam hendrerit, id bibendum ipsum vehicula. Aliquam vitae ligula sem. Curabitur lobortis leo imperdiet tellus accumsan iaculis. Sed nec consequat nisi, at laoreet est. In non arcu elementum, pellentesque erat sit amet, tristique turpis. Morbi vitae turpis enim. </p>
+                                                <p class="text-justify">{{description}} </p>
 
                                             </div>
-                                            <button type="button" class="btn btn-primary btn-lg">¡Participa!</button>
+                                            <form method="post" action="/pay?projectId={{id}}">
+                                                <button type=" submit " class="btn btn-primary btn-lg "> ¡Participa!</button>
+                                            </form>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <table class="table table-bordered table-striped">
+                                    <div class="row ">
+                                        <table class="table table-bordered table-striped ">
                                             <tbody>
                                                 <tr>
                                                     <th>Presupuesto total</th>
-                                                    <td>60.000 euros</td>
+                                                    <td>{{totalBudget}} euros</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Presupuesto concedido</th>
-                                                    <td>41.614,55 euros</td>
+                                                    <td>{{parcialBudget}} euros</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Financiación pendiente</th>
-                                                    <td>18.385,45 euros</td>
+                                                    <td>{{restBudget}} euros</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Duración</th>
-                                                    <td>Permanente</td>
+                                                    <td>{{type}}</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Año de inicio</th>
-                                                    <td>2011</td>
+                                                    <td>{{startYear}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
                                     </div>
                                 </div>
-
-
+                                {{/Project}}
                             </div>
                         </div>
                     </div>
@@ -144,85 +146,85 @@
 
 
         <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3 col-lg-3">
-                        <div class="widget">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-sm-3 col-lg-3 ">
+                        <div class="widget ">
                             <h4>Get in touch with us</h4>
                             <address>
 					<strong>Sailor company Inc</strong><br>
 					 Sailor suite room V124, DB 91<br>
 					 Someplace 71745 Earth </address>
                             <p>
-                                <i class="icon-phone"></i> (123) 456-7890 - (123) 555-7891
+                                <i class="icon-phone "></i> (123) 456-7890 - (123) 555-7891
                                 <br>
-                                <i class="icon-envelope-alt"></i> email@domainname.com
+                                <i class="icon-envelope-alt "></i> email@domainname.com
                             </p>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-lg-3">
-                        <div class="widget">
+                    <div class="col-sm-3 col-lg-3 ">
+                        <div class="widget ">
                             <h4>Information</h4>
-                            <ul class="link-list">
-                                <li><a href="#">Press release</a></li>
-                                <li><a href="#">Terms and conditions</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Career center</a></li>
-                                <li><a href="#">Contact us</a></li>
+                            <ul class="link-list ">
+                                <li><a href="# ">Press release</a></li>
+                                <li><a href="# ">Terms and conditions</a></li>
+                                <li><a href="# ">Privacy policy</a></li>
+                                <li><a href="# ">Career center</a></li>
+                                <li><a href="# ">Contact us</a></li>
                             </ul>
                         </div>
 
                     </div>
-                    <div class="col-sm-3 col-lg-3">
-                        <div class="widget">
+                    <div class="col-sm-3 col-lg-3 ">
+                        <div class="widget ">
                             <h4>Pages</h4>
-                            <ul class="link-list">
-                                <li><a href="#">Press release</a></li>
-                                <li><a href="#">Terms and conditions</a></li>
-                                <li><a href="#">Privacy policy</a></li>
-                                <li><a href="#">Career center</a></li>
-                                <li><a href="#">Contact us</a></li>
+                            <ul class="link-list ">
+                                <li><a href="# ">Press release</a></li>
+                                <li><a href="# ">Terms and conditions</a></li>
+                                <li><a href="# ">Privacy policy</a></li>
+                                <li><a href="# ">Career center</a></li>
+                                <li><a href="# ">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-lg-3">
-                        <div class="widget">
+                    <div class="col-sm-3 col-lg-3 ">
+                        <div class="widget ">
                             <h4>Newsletter</h4>
                             <p>Fill your email and sign up for monthly newsletter to keep updated</p>
-                            <div class="form-group multiple-form-group input-group">
-                                <input type="email" name="email" class="form-control">
-                                <span class="input-group-btn">
-                            <button type="button" class="btn btn-theme btn-add">Subscribe</button>
+                            <div class="form-group multiple-form-group input-group ">
+                                <input type="email " name="email " class="form-control ">
+                                <span class="input-group-btn ">
+                            <button type="button " class="btn btn-theme btn-add ">Subscribe</button>
                         </span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="sub-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="copyright">
+            <div id="sub-footer ">
+                <div class="container ">
+                    <div class="row ">
+                        <div class="col-lg-6 ">
+                            <div class="copyright ">
                                 <p>&copy; Sailor Theme - All Right Reserved</p>
-                                <div class="credits">
+                                <div class="credits ">
                                     <!-- 
                                 All the links in the footer should remain intact. 
                                 You can delete the links only if you purchased the pro version.
                                 Licensing information: https://bootstrapmade.com/license/
                                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Sailor
                             -->
-                                    <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                                    <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/ ">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <ul class="social-network">
-                                <li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-                                <li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
+                        <div class="col-lg-6 ">
+                            <ul class="social-network ">
+                                <li><a href="# " data-placement="top " title="Facebook "><i class="fa fa-facebook "></i></a></li>
+                                <li><a href="# " data-placement="top " title="Twitter "><i class="fa fa-twitter "></i></a></li>
+                                <li><a href="# " data-placement="top " title="Linkedin "><i class="fa fa-linkedin "></i></a></li>
+                                <li><a href="# " data-placement="top " title="Pinterest "><i class="fa fa-pinterest "></i></a></li>
+                                <li><a href="# " data-placement="top " title="Google plus "><i class="fa fa-google-plus "></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -230,23 +232,23 @@
             </div>
         </footer>
     </div>
-    <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
+    <a href="# " class="scrollup "><i class="fa fa-angle-up active "></i></a>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/modernizr.custom.js"></script>
-    <script src="/js/jquery.easing.1.3.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/plugins/flexslider/jquery.flexslider-min.js"></script>
-    <script src="/plugins/flexslider/flexslider.config.js"></script>
-    <script src="/js/jquery.appear.js"></script>
-    <script src="/js/stellar.js"></script>
-    <script src="/js/classie.js"></script>
-    <script src="/js/uisearch.js"></script>
-    <script src="/js/jquery.cubeportfolio.min.js"></script>
-    <script src="/js/google-code-prettify/prettify.js"></script>
-    <script src="/js/animate.js"></script>
-    <script src="/js/custom.js"></script>
+    <script src="/js/jquery.min.js "></script>
+    <script src="/js/modernizr.custom.js "></script>
+    <script src="/js/jquery.easing.1.3.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
+    <script src="/plugins/flexslider/jquery.flexslider-min.js "></script>
+    <script src="/plugins/flexslider/flexslider.config.js "></script>
+    <script src="/js/jquery.appear.js "></script>
+    <script src="/js/stellar.js "></script>
+    <script src="/js/classie.js "></script>
+    <script src="/js/uisearch.js "></script>
+    <script src="/js/jquery.cubeportfolio.min.js "></script>
+    <script src="/js/google-code-prettify/prettify.js "></script>
+    <script src="/js/animate.js "></script>
+    <script src="/js/custom.js "></script>
 
 
 </body>
