--- a/WADWolfram/src/main/resources/templates/users.html
+++ b/WADWolfram/src/main/resources/templates/users.html
@@ -114,7 +114,7 @@
                                             <li class="list-group-item">
                                                 <H3><a href="oneProyect.html">{{title}}</a></H3>
                                                 <p>{{shortDescription}}</p>
-                                                <p>{{.money}}</p>
+                                                <p>{{money}}</p>
                                             </li>
                                             {{/colaborateProjects}}
                                         </ul>
@@ -140,7 +140,7 @@
                                             </thead>
                                             <tbody>{{#movements}}
                                                 <tr>
-                                                    <td><a href="#">{{title}}</a></td>
+                                                    <td><a href="#">{{projectTitle}}</a></td>
                                                     <td>{{money}}</td>
                                                     <td>{{date}}</td>
                                                 </tr>
@@ -151,52 +151,55 @@
                                     </div>
                                 </div>
                                 <div class="row hide" id="dataPage">
-                                    <div class="col-md-6">
-                                        <div id="profilePhoto">
-                                            <img src="/img/icono.jpg" id="profileIcon" class="img-responsive" />
-                                            <div class="form-group">
-                                                <label for="exampleInputFile">Cambiar foto</label>
-                                                <input type="file" id="exampleInputFile" class="center-block">
-                                                <p class="help-block">Seleccionar nueva foto.</p>
+                                    <form role="form" class="register-form" action="/users/update" method="post">
+                                        <div class="col-md-6">
+                                            <div id="profilePhoto">
+
+                                                <img src="/img/icono.jpg" id="profileIcon" class="img-responsive" />
+                                                <div class="form-group">
+                                                    <label for="exampleInputFile">Cambiar foto</label>
+                                                    <input type="file" id="exampleInputFile" class="center-block" name="photo">
+                                                    <p class="help-block">Seleccionar nueva foto.</p>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div id="data">
-                                            {{#User}}
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Nombre</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{name}}>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Apellidos</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{surname}}>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Dirección Email</label>
-                                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{email}}>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputEmail1">Nombre Usuario</label>
-                                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Nombre Usuario">
-                                            </div>
+                                        <div class="col-md-6">
+                                            <div id="data">
 
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Antigua Contraseña</label>
-                                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}}>
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="exampleInputPassword1">Nueva Contraseña</label>
-                                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}}>
-                                            </div>
+                                                {{#User}}
+                                                <div class="form-group">
+                                                    <label for="exampleInputEmail1">Nombre</label>
+                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{name}} name="name">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="exampleInputEmail1">Apellidos</label>
+                                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder={{surname}} name="surname">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="exampleInputEmail1">Dirección Email</label>
+                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{email}} name="email">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="exampleInputEmail1">Nombre Usuario</label>
+                                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder={{userName}} name="username">
+                                                </div>
 
-                                            <button type="button" class="btn btn-primary btn-lg">Guardar Cambios</button>
-                                            {{/User}}
+                                                <div class="form-group">
+                                                    <label for="exampleInputPassword1">Antigua Contraseña</label>
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{oldPassword}} name="oldPassword">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="exampleInputPassword1">Nueva Contraseña</label>
+                                                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder={{newPassword}} name="newPassword">
+                                                </div>
+
+                                                <button type="submit" class="btn btn-primary btn-lg">Guardar Cambios</button>
+                                                {{/User}}
+
+                                            </div>
                                         </div>
-                                    </div>
+                                    </form>
                                 </div>
-
-
                             </div>
                         </div>
                     </div>
