--- a/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
+++ b/WADWolfram/src/main/resources/templates/Bootstrap-Admin-Theme/donations.html
@@ -90,68 +90,87 @@
                 </div>
             </div>
             <div data-brackets-id='178' class="col-md-9">
-<div data-brackets-id='179' class="content-box-large">
-  				<div data-brackets-id='180' class="panel-heading">
-                    <div data-brackets-id='181' class="panel-title"><h4>Donaciones</h4></div>
-                 
-                                    <div data-brackets-id='182' class="panel-options">
-                                        <a data-brackets-id='183' href="#" data-rel="collapse" title="Refrescar"><i data-brackets-id='184' class="glyphicon glyphicon-refresh"></i></a>
-                                    </div>
-                            
-				</div>
-  				<div data-brackets-id='185' class="panel-body">
-  					<table data-brackets-id='186' cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
-						<thead data-brackets-id='187'>
-							<tr data-brackets-id='188'>
-								<th data-brackets-id='189'>Nombre del proyecto</th>
-                                <th data-brackets-id='190'>Nombre del usuario</th>
-                                <th data-brackets-id='191'>Cantidad donada - €</th>
-                                <th data-brackets-id='192' id="fecha">Fecha de donación</th>
-							</tr>
-						</thead>
-						<tbody data-brackets-id='193'>
-							<tr data-brackets-id='194' class="odd gradeX">
-								<td data-brackets-id='195'>Proyecto 1</td>
-								<td data-brackets-id='196'>Usuario 1</td>
-								<td data-brackets-id='197'>30</td>
-								<td data-brackets-id='198'>2016/11/04</td>
-								
-							</tr>
-							<tr data-brackets-id='199' class="even gradeC">
-								<td data-brackets-id='200'>Proyecto 1</td>
-								<td data-brackets-id='201'>Usuario 2</td>
-								<td data-brackets-id='202'>55</td>
-								<td data-brackets-id='203'>2016/12/12</td>
-							</tr>
-							<tr data-brackets-id='204' class="odd gradeA">
-								<td data-brackets-id='205'>Proyecto 2</td>
-								<td data-brackets-id='206'>Usuario 1</td>
-								<td data-brackets-id='207'>78</td>
-								<td data-brackets-id='208'>2016/08/14</td>
-							</tr>
-							<tr data-brackets-id='209' class="even gradeA">
-								<td data-brackets-id='210'>Proyecto 3</td>
-								<td data-brackets-id='211'>Usuario 2</td>
-								<td data-brackets-id='212'>55</td>
-								<td data-brackets-id='213'>2017/01/07</td>
-							</tr>
-							<tr data-brackets-id='214' class="odd gradeA">
-								<td data-brackets-id='215'>Proyecto 4</td>
-								<td data-brackets-id='216'>Usuario 3</td>
-								<td data-brackets-id='217'>116</td>
-								<td data-brackets-id='218'>2016/10/23</td>
-							</tr>
-							<tr data-brackets-id='219' class="even gradeA">
-								<td data-brackets-id='220'>Proyecto 4</td>
-								<td data-brackets-id='221'>Usuario 1</td>
-								<td data-brackets-id='222'>130</td>
-								<td data-brackets-id='223'>2016/10/31</td>
-								
-							</tr>
-						</tbody>
-					</table>
-  				</div>
-  			</div>
+                <div data-brackets-id='179' class="content-box-large">
+                    <div data-brackets-id='180' class="panel-heading">
+                        <div data-brackets-id='181' class="panel-title">
+                            <h4>Donaciones</h4></div>
+
+                        <div data-brackets-id='182' class="panel-options">
+                            <a data-brackets-id='183' href="#" data-rel="collapse" title="Refrescar"><i data-brackets-id='184' class="glyphicon glyphicon-refresh"></i></a>
+                        </div>
+
+
+                    </div>
+
+
+                    <div data-brackets-id='185' class="panel-body">
+                        <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                            Cantidad <span class="caret"></span>
+                        </button>
+
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">MIN-X</a></li>
+                            <li><a href="#">X-Y</a></li>
+                            <li><a href="#">Y-z</a></li>
+                            <li><a href="#">Z-MAX</a></li>
+                        </ul>
+                    </div>
+                        <br>
+                        <br>
+                    
+                        <table data-brackets-id='186' cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
+                            <thead data-brackets-id='187'>
+                                <tr data-brackets-id='188'>
+                                    <th data-brackets-id='189'>Nombre del proyecto</th>
+                                    <th data-brackets-id='190'>Nombre del usuario</th>
+                                    <th data-brackets-id='191'>Cantidad donada - €</th>
+                                    <th data-brackets-id='192' id="fecha">Fecha de donación</th>
+                                </tr>
+                            </thead>
+                            <tbody data-brackets-id='193'>
+                                <tr data-brackets-id='194' class="odd gradeX">
+                                    <td data-brackets-id='195'>Proyecto 1</td>
+                                    <td data-brackets-id='196'>Usuario 1</td>
+                                    <td data-brackets-id='197'>30</td>
+                                    <td data-brackets-id='198'>2016/11/04</td>
+
+                                </tr>
+                                <tr data-brackets-id='199' class="even gradeC">
+                                    <td data-brackets-id='200'>Proyecto 1</td>
+                                    <td data-brackets-id='201'>Usuario 2</td>
+                                    <td data-brackets-id='202'>55</td>
+                                    <td data-brackets-id='203'>2016/12/12</td>
+                                </tr>
+                                <tr data-brackets-id='204' class="odd gradeA">
+                                    <td data-brackets-id='205'>Proyecto 2</td>
+                                    <td data-brackets-id='206'>Usuario 1</td>
+                                    <td data-brackets-id='207'>78</td>
+                                    <td data-brackets-id='208'>2016/08/14</td>
+                                </tr>
+                                <tr data-brackets-id='209' class="even gradeA">
+                                    <td data-brackets-id='210'>Proyecto 3</td>
+                                    <td data-brackets-id='211'>Usuario 2</td>
+                                    <td data-brackets-id='212'>55</td>
+                                    <td data-brackets-id='213'>2017/01/07</td>
+                                </tr>
+                                <tr data-brackets-id='214' class="odd gradeA">
+                                    <td data-brackets-id='215'>Proyecto 4</td>
+                                    <td data-brackets-id='216'>Usuario 3</td>
+                                    <td data-brackets-id='217'>116</td>
+                                    <td data-brackets-id='218'>2016/10/23</td>
+                                </tr>
+                                <tr data-brackets-id='219' class="even gradeA">
+                                    <td data-brackets-id='220'>Proyecto 4</td>
+                                    <td data-brackets-id='221'>Usuario 1</td>
+                                    <td data-brackets-id='222'>130</td>
+                                    <td data-brackets-id='223'>2016/10/31</td>
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
             </div>
         </div>
